welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:11: error: type mismatch;
 found   : Int(13)
 required: Boolean
	return 13;
               ^