welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if ( isMorning && isMom && !isAsleep ) {
		return true;
	}
	if ( isAsleep ) {
		return false;
	}
	if ( isMorning && !isMom && !isAsleep) {
		return false;
	}
	return 13;
}
